# forust

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html  objects.inv  rs-example.md  scratch.py
.github/workflows/: CI.yml  cargo-build-publish.yml  docs.yml
benches/: forust_benchmarks.rs
examples/: titanic.rs
forust/: model.py
py-forust/: Cargo.toml  Testing-on-larger-data.ipynb  mkdocs.yml  pyproject.toml  scratch.py
py-forust/docs/: index.md
py-forust/forust/: __init__.py  serialize.py
py-forust/src/: lib.rs
py-forust/tests/: test_booster.py  test_serailze.py
pyforust/: model.py
resources/: contiguous_no_missing.csv  make_resources.py  performance.csv
scratch-implementation/: README.md
scripts/: make_resources.py  remove-optional-deps.py  run-python-tests.ps1
search/: search_index.json
src/: binner.rs  binning.rs  constraints.rs  data.rs  errors.rs  exactsplitter.rs  gradientbooster.rs  grower.rs  histogram.rs  histsplitter.rs  lib.rs  metric.rs  missinghandler.rs  node.rs  objective.rs  partial_dependence.rs  sampler.rs  shapley.rs  shaply.rs  splitter.rs  tree.rs  utils.rs
