[package]
name = "forust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
thiserror = "1.0.31"
serde_json = {version = "1.0", features = ["float_roundtrip"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "forust_benchmarks"
harness = false
