[package]
name = "forust-ml"
version = "0.2.15"
edition = "2021"
authors = ["James Inlow <james.d.inlow@gmail.com>"]
homepage = "https://github.com/jinlow/forust"
description = "A lightweight gradient boosting implementation in Rust."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/jinlow/forust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = 'fat'
codegen-units = 1

[dependencies]
rayon = "1.7"
thiserror = "1.0"
serde_json = { version = "1.0", features = ["float_roundtrip"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
criterion = "0.5"
polars = "0.29"
reqwest = { version = "0.11", features = ["blocking"] }

[[bench]]
name = "forust_benchmarks"
harness = false
