[package]
name = "py-forust"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "forust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
forust-ml = { version="0.1.7", path="../" }
numpy = "0.17.2"
ndarray = "0.15.1"
