[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "forust"
description = "A lightweight gradient boosting implementation in Rust."
license = { file = "LICENSE" }
keywords = [
  "rust",
  "forust",
  "machine learning",
  "xgboost",
  "tree model",
  "decision tree",
]
authors = [{ name = "James Inlow" }]
readme = "README.md"
dependencies = ["numpy>=1.21", "pandas>=1.3"]
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
dev = ["maturin", "pytest", "seaborn", "xgboost==1.6.1", "scikit-learn"]

[tool.maturin]
sdist-include = ["LICENSE", "README.md"]
